# trekking

./: README.md
FreeCAD/: README.md  axis-cap.FCStd1  axte-lidar.FCStd1  cap-camera.FCStd1  case-camera-full.FCStd  case-camera-full.FCStd1  case-camera-tras.FCStd  disco-encoder.FCStd  fixador-caixa.FCStd  mesa-base.FCStd  mesa-base.FCStd1  suporte-NANO-BLE33S.FCStd  suporte-NANO-BLE33S.FCStd1  suporte-alca-90.FCStd  suporte-alca.FCStd  suporte-alca.FCStd1  suporte-bateria.FCStd1  suporte-mesa-base.FCStd  suporte-mesa-base.FCStd1  suporte-motores.FCStd  suporte-motores.FCStd1  suporte-pin.FCStd  suporte-pin.FCStd1  suporte-raspberr.FCStd1  suporte-raspberrypi.FCStd  suporte-raspberrypi.FCStd1  suporte-torre-instrumentos.FCStd  v-slot-2020-fuso-M8.FCStd  v-slot-2020-fuso-M8.FCStd1  v-slot-2020-mancal-motor-trem.FCStd  v-slot-2020-mancal-motor-trem.FCStd1  v-slot-2020-mancal-motor.FCStd  v-slot-2020-suporte-CJVL53L0XV2.FCStd1  v-slot-2020-suporte-fuso-M8.FCStd  v-slot-2020-suporte-fuso-M8.FCStd1  v-slot-2020-suporte-ponteH.FCStd  v-slot-2020-suporte-ponteH.FCStd1  v-slot-2020-tem-45mm.FCStd  v-slot-2020-tem-45mm.FCStd1  v-slot-2020-tem-6mm.FCStd  (+2 more)
FreeCAD/materiais-medidas/: furos-ponte-h  v-slot-2020-trem-45mm  v-slot-trem-base-proca  v-slot-trem-topo
FreeCAD/motor/: base-suporte-inferior.FCStd  espacador-27mm.FCStd  espacador-4mm7.FCStd  suporte-articulado-superior.FCStd
FreeCAD/stl/: CE3_v-slot-2020-suporte-CJVL53L0XV2.gcode  axis-cap.stl  cap-camera.stl  case-camera-frente.stl  case-camera-suporte.stl  case-camera-tras.stl  fixador-caixa-Body.stl  mesa-base.stl  mesa-base170x137mm-Body.stl  mesa-base170x180mm-Body.stl  sporte-encoder.stl  suporte-NANO-BLE33S.stl  suporte-alca-90.stl  suporte-antena-GPRS.stl  suporte-bateria.stl  suporte-mesa-base.stl  suporte-raspberrypi.stl  suporte-torre-instrumentos.stl  v-slot-2020-mancal-motor.stl  v-slot-2020-suporte-CJVL53L0XV2.stl  v-slot-2020-suporte-fuso-M8.stl  v-slot-2020-suporte-ponteH.stl  v-slot-2020-tem-6mm.stl  v-slot-2020-trem-20mm.stl
anteriores-descontinuados/: README.md
anteriores-descontinuados/controle-rf/: README.md
anteriores-descontinuados/firmware/: README.md  conexao.drawio
anteriores-descontinuados/firmware/NANO_BLE_33S/: CMakeLists.txt  Kconfig  README.md  build_arduino_nano_33_ble.sh  prj.conf
anteriores-descontinuados/firmware/NANO_BLE_33S/lib/usb/: usb_cdc_acm_uart.h
anteriores-descontinuados/firmware/NANO_BLE_33S/lib/vl53l0x/: vl53l0x.c
anteriores-descontinuados/gameped-rv1/: README.md
anteriores-descontinuados/gameped-rv2/: README.md  gamepad-rv2-server.service
anteriores-descontinuados/pecas/: README.md
anteriores-descontinuados/systen-config-rv1/: README.md
anteriores-descontinuados/systen-config-rv2/: README.md  flows-JETSON_NANO.json
circuito/: #auto_saved_files#  README.md  fp-info-cache  trekking.kicad_pcb  trekking.kicad_prl  trekking.kicad_pro  trekking.kicad_sch
circuito/GERBER/: trekking-Cobre traseira.gbr  trekking-Cortes contorno.gbr  trekking-Máscara frontal.gbr  trekking-Máscara traseira.gbr  trekking-NPTH-drl_map.ps  trekking-NPTH.drl  trekking-PTH-drl_map.ps  trekking-PTH.drl  trekking-Pasta frontal.gbr  trekking-Pasta traseira.gbr  trekking-Serigrafia frontal.gbr  trekking-Serigrafia traseira.gbr  trekking-cobre frontal.gbr  trekking-job.gbrjob
circuito/PECDR-W/: PECDR.kicad_pcb  PECDR.kicad_prl  PECDR.kicad_pro  PECDR.kicad_sch  PECDR.kicad_sch-bak  README.md  fp-info-cache  fp-lib-table  sym-lib-table  ~PECDR.kicad_sch.lck
circuito/esquema-geral/: esquema-geral.kicad_prl  esquema-geral.kicad_pro  esquema-geral.kicad_sch
circuito/fonte-de-energia/: fonte-de-energia.kicad_sch
circuito/rasp-rpipico/: README.md  sym-lib-table  trekking.kicad_pcb  trekking.kicad_prl
circuito/rasp-sense33/: README.md  fp-info-cache  trekking.kicad_pcb  trekking.kicad_pro  trekking.kicad_sch
experimentos/esc-brushed-escovado-320a/: PWM_127_PARA_255.csv  analises.ipynb  esc-brushed-escovado-320a.ino
firmware/: .$conexao.drawio.bkp  .$conexao.drawio.dtmp  README.md  conexao.drawio
firmware/NANO_BLE_33S/: CMakeLists.txt  (+1 more)
firmware/PECDR/motores/: CMakeLists.txt
firmware/PECDR/motores/includes/: config.h
firmware/PECDR/motores/lib/textProtocol/: textProtocol.h
firmware/PECDR/motores/src/: main.c
firmware/RPI_PICO/: .gitignore  CMakeLists.txt  prj.conf  rpi_pico.sh
firmware/RPI_PICO/boards/: rpi_pico.overlay
firmware/RPI_PICO/includes/: config.h  hardware.h
firmware/RPI_PICO/lib/comm/: comm.c
firmware/RPI_PICO/lib/gprs/: gprs.c  gprs.h
firmware/RPI_PICO/motor/: motor.h
firmware/RPI_PICO/src/: main.c
firmware/RPI_PICO/src/modules/motor/: motor.c
firmware/RPI_PICO_SDK/: CMakeLists.txt  build.sh  flash.sh  pico_sdk_import.cmake
firmware/RPI_PICO_SDK/includes/: config.h  hardware.h
firmware/RPI_PICO_SDK/lib/motor/: motor.c  motor.h
firmware/RPI_PICO_SDK/lib/pid/: pid.c
firmware/RPI_PICO_SDK/lib/simple_uart/: simple_uart.c
firmware/RPI_PICO_SDK/lib/telemetry/: telemetry_power.c  telemetry_power.h
firmware/RPI_PICO_SDK/lib/textProtocol/: textProtocol.h
firmware/RPI_PICO_SDK/lib/uart/: simple_uart.c  simple_uart.h
firmware/RPI_PICO_SDK/src/: main.c
firmware/RPI_PICO_ZEPHYR/: CMakeLists.txt
firmware/RPI_PICO_ZEPHYR/boards/: rpi_pico.overlay
firmware/RPI_PICO_ZEPHYR/includes/: config.h  hardware.h
firmware/RPI_PICO_ZEPHYR/lib/gprs/: gprs.c
firmware/RPI_PICO_ZEPHYR/lib/led/: led.h
firmware/RPI_PICO_ZEPHYR/lib/motor/: motor.c
firmware/RPI_PICO_ZEPHYR/lib/textProtocol/: textProtocol.h
firmware/RPI_PICO_ZEPHYR/src/: main.c
pecas/: README.md  axis-M4toM8.FCStd  fixador-caixa-porcas.FCStd  mesa-base170x137mm.FCStd  mesa-base170x180mm.FCStd  suporte-NANO-BLE33S.FCStd  suporte-antena-GPRS.FCStd  suporte-bateria.FCStd  suporte-gps.FCStd  suporte-switch.FCStd  v-slot-2020-90-trem.FCStd  v-slot-2020-90.FCStd
raspberry-config/: README.md  flows.json  gameped.py  gameped2.py  install_rasp.sh  ws_client.py  ws_server.py
systen-config/: README.md  flows-JETSON_NANO.json  flows-RASPBERRY_PI.json  flows-auto.json  flows-event.json
(+555 files in other folders)
